--- a/assets/css/templates/_home.scss
+++ b/assets/css/templates/_home.scss
@@ -37,7 +37,7 @@
 .slide-show__project-description {
     background-color: $dark;
     color: white;
-    padding: 10px;
+    padding: 10px 35px;
     cursor: initial;
     @include transition(2s);
     opacity: 0;
@@ -88,6 +88,7 @@
         background-color: transparentize($dark, .2);
         @include border-radius(5px);
         @include transform(translateY(100%));
+        padding: 10px;
     }
 
     .active .slide-show__project-description {
